# TextEditor

./: CMakeLists.txt  text.txt
include/glad/: glad.h
misc/: shader.fs  shell.bat
res/shaders/: shader.fs  shader.vs
src/: KeyboardInput.h  ShaderManager.cpp  ShaderManager.h  glad.c  keyboard_input.h  main.cpp  render.cpp  render.h  shader_manager.cpp  shader_manager.h  sprite_manager.cpp  sprite_manager.h  stb_image.cpp  text_editor.cpp  text_editor.h  text_memory.cpp  text_memory.h
src/ins/: ins.h
